# siqueira-memo

./: .dockerignore  .env.example  .gitignore  Dockerfile  IMPLEMENTATION_PLAN.md  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_memory_versions.py  0003_memory_relationships.py
docs/: HERMES_PLUGIN.md  INSTALL.md  github-actions-ci.example.yml  hermes_config_example.yaml
docs/plans/: 2026-04-28-siqueira-memory-roadmap.md
plugins/memory/siqueira-memo/: README.md  __init__.py  cli.py  plugin.yaml
scripts/: bootstrap.sh  dev_reset_db.py  export_markdown.py  import_hermes_sessions.py  install_hermes_provider.sh  rebuild_embeddings.py  smoke_compose.sh
src/siqueira_memo/: config.py  db.py  logging.py  main.py
src/siqueira_memo/api/: deps.py  routes_admin.py  routes_admin_ui.py  routes_health.py  routes_ingest.py  routes_memory.py  routes_recall.py
src/siqueira_memo/cli/: __init__.py  (+3 more)
tests/: conftest.py
tests/evals/: test_golden_eval.py  test_redaction_corpus.py
tests/integration/: test_admin_conflicts_audit.py  test_admin_entity_card_api.py  test_api_routes.py  test_security_regressions.py
tests/unit/: test_canonical.py  test_chunking_service.py  test_cli_entrypoints.py  test_conflict_service.py  test_context_tree_service.py  test_deletion_service.py  test_embed_chunks_job.py  test_embedding_registry.py  test_entity_card_service.py  test_entity_linking.py  test_entity_merge_service.py  test_event_payloads.py  test_extraction_gate.py  test_extraction_service.py  test_hermes_provider.py  test_hindsight_adapter.py  test_ingest_service.py  test_markdown_export.py  test_memory_capture_classifier.py  test_partition_service.py  test_postgres_dialect_smoke.py  test_promotion_service.py  test_prompt_hash_boot.py  test_prompt_registry.py  test_redaction_service.py  test_relationship_service.py  test_retention_service.py  test_retrieval_service.py  test_session_importer.py  test_trust_service.py  test_worker_jobs.py
(+77 files in other folders)
