[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "siqueira-memo"
version = "0.1.0"
description = "Production-grade, Hermes-native long-term memory system with provenance, redaction, and hybrid retrieval."
requires-python = ">=3.11"
readme = "README.md"
authors = [{ name = "Siqueira Memo maintainers" }]
license = "Apache-2.0"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "sqlalchemy[asyncio]>=2.0",
  "alembic>=1.13",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "httpx>=0.27",
  "tiktoken>=0.5",
  "aiosqlite>=0.19",
]

[project.optional-dependencies]
postgres = [
  "asyncpg>=0.29",
  "pgvector>=0.2",
]
queue = [
  "redis>=5.0",
  "dramatiq[redis]>=1.16",
]
secrets = [
  "detect-secrets>=1.4",
]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.4",
  "mypy>=1.9",
]
otel = [
  "opentelemetry-api>=1.24",
  "opentelemetry-sdk>=1.24",
]

[project.scripts]
siqueira-memo = "siqueira_memo.main:main"
siqueira-memo-worker = "siqueira_memo.workers.worker:main"
siqueira-memo-evals = "siqueira_memo.evals.runner:_main"
siqueira-memo-import-hermes = "siqueira_memo.cli.import_hermes_sessions:main"
siqueira-memo-rebuild-embeddings = "siqueira_memo.cli.rebuild_embeddings:main"
siqueira-memo-export-markdown = "siqueira_memo.cli.export_markdown:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
siqueira_memo = [
  "prompts/*.md",
  "hermes_provider/system_prompt.md",
  "py.typed",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
filterwarnings = [
  "ignore::DeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501", "B008"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
